--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
